# travel_agent

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt
Agent/: blank.txt  llm.py  tools.py
Tests/: test_e2e_search_flights.py  test_search_flights.py
Tools/: search_flights.py  search_flights_tool.py
Utils/: logger.py  schemas.py  session_manager.py
static/: currencies.json  marked.umd.js  script.js  style.css
templates/: index.html
